[package]
name = "pygutters"
description = "Quick and dirty tools for the intrepid plumber."
categories = ["network-programming"]
version = "0.1.0"
authors = ["gggto <47183108+gggto@users.noreply.github.com>"]
repository = "https://github.com/gggto/pygutters"
license = "MIT"
readme = "README-pypi.md"
edition = "2021"

[lib]
name = "gutters"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["abi3-py37", "extension-module", "anyhow"] }
anyhow = "1.0"
gutters = "0.1.1"
interprocess = "1.1.1"

[package.metadata.maturin]
name = "gutters"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Networking",
]
requires-python = ">=3.7"
project-url = { Repository = "https://github.com/gggto/pygutters" }